crates/keron-lang/tests/corpus/errors/check/or_non_boolean.keron
val x: Boolean = "yes" || false
